# obsidian-webdev

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.base  config.py  main.py  pyproject.toml
backend/agents/: agent.py  tools.py
backend/core/: __init__.py  crypto.py  rate_limiter.py  security.py  vault.py
backend/database/: __init__.py  mongo.py  sql.py
backend/migrations/: env.py
backend/migrations/versions/: 05ef92fa7dfd_initial_schema.py  a1b2c3d4e5f6_add_project_secrets.py  c5753dca4238_add_user_secrets.py
backend/models/: __init__.py  mongo_models.py  sql_models.py
backend/routers/: __init__.py  agent.py  auth.py  containers.py  git.py  projects.py  settings.py  vault.py  workspace.py
backend/schemas/: __init__.py  agent.py  auth.py  containers.py  files.py  projects.py  vault.py
backend/services/: __init__.py  agent_runner.py  auth_service.py  container_service.py  embedding_service.py  file_service.py  git_service.py  model_router.py  project_service.py  vault_service.py
backend/websocket/: agent_ws.py  manager.py  terminal_ws.py
docs/: AGENT_SYSTEM_PROMPT.md
docs/agent-skills/: blank.md  fastapi.md  (+5 more)
frontend/: .dockerignore  .env.example  DESIGN_SYSTEM.md  Dockerfile  auth.ts  next.config.ts  package-lock.json  package.json
scripts/: dev.js  dev.sh  start-services.js  start-services.sh
(+39 files in other folders)
